# fleet

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: EXTERNAL_AGENTS.md  EXTERNAL_TOOLS.md
scripts/: README.md  ensure-deps.mjs  free-dev-port.mjs
scripts/macos/: setup.sh
scripts/windows/: setup.ps1
src/: App.tsx  ErrorBoundary.tsx  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agentwatch.rs  attach.rs  bridge.rs  cdp.rs  config.rs  diagnostics.rs  embed.rs  exec.rs  git.rs  lib.rs  pty.rs  sessions.rs  tools.rs  webtabs.rs
src/api/: agent.ts  attach.ts  cdp.ts  claude.ts  config.ts  embed.ts  exec.ts  git.ts  planner.ts  presetgen.ts  pty.ts  system.ts  tools.ts  web.ts
src/features/attention/: AttentionPeek.tsx  attention.css
src/features/blocks/: CommandPalette.tsx  blocks.css
src/features/board/: QueueBoard.tsx  board.css
src/features/dashboard/: Dashboard.tsx  dashboard.css
src/features/drawer/: BlocksPanel.tsx  Drawer.tsx  SchedulePanel.tsx  drawer.css
src/features/overview/: OverviewPanel.tsx  overview.css
src/features/plan/: LiveView.tsx  NotesPanel.tsx  PlanView.tsx  plan.css
src/features/presets/: PresetBar.tsx  PresetsPanel.tsx  presets.css
src/hooks/: useClaudeSessions.ts  useFleet.ts
src/lib/: activity.ts  agents.ts  board.ts  layout.ts  plan.ts  planLayout.ts  platform.ts  presets.ts  themes.ts  tools.ts  webAdapters.ts  worktree.ts
src/styles/: global.css
(+20 files in other folders)
